--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,29 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+      <div class="cont">
+        <form class="form">
+          <label>
+            <input
+              class="input-text"
+              type="text"
+              name="search-text"
+              placeholder="Search images..."
+              required
+            />
+          </label>
+          <button class="btn" type="submit">Search</button>
+        </form>
+        <p class="waiting-text"></p>
+      </div>
 
-    <load src="./partials/footer.html" />
+      <ul class="gallery">
+        <li class="item">
+          <img src="" alt="#" width="360" height="200" />
+        </li>
+      </ul>
+    </main>
 
     <script type="module" src="./main.js"></script>
   </body>
