--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <div class="cont">
+        <h1>Gallery</h1>
         <form class="form">
           <label>
             <input
@@ -22,14 +23,10 @@
           </label>
           <button class="btn" type="submit">Search</button>
         </form>
-        <p class="waiting-text"></p>
+        <div class="loader"></div>
       </div>
 
-      <ul class="gallery">
-        <li class="item">
-          <img src="" alt="#" width="360" height="200" />
-        </li>
-      </ul>
+      <div class="gallery"></div>
     </main>
 
     <script type="module" src="./main.js"></script>
