--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
           </label>
           <button class="btn" type="submit">Search</button>
         </form>
-        <div class="loader"></div>
+        <span class="loader"></span>
       </div>
 
-      <div class="gallery"></div>
+      <ul class="gallery"></ul>
     </main>
 
     <script type="module" src="./main.js"></script>
